Create system admin account for SSO user